@@ -1,6 +1,6 @@
 Package: optimx
-Version: 2013.6.4
-Date: 2012-06-04
+Version: 2013.7.3
+Date: 2012-07-03
 Title: A Replacement and Extension of the optim() Function
 Authors@R: c( person(given = c("John", "C."), family = "Nash", role =
         c("aut", "cre"), email = "nashjc@uottawa.ca"), person(given =
@@ -18,3 +18,4 @@ License: GPL-2
 LazyLoad: Yes
 Depends: numDeriv
 Suggests: BB, ucminf, Rcgmin, Rvmmin, minqa, setRNG, dfoptim, svUnit
+Packaged: 2013-07-03 20:44:03 UTC; john
